--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -566,10 +566,36 @@ The paradigm code, as well as the R Markdown file used to analyze the data and w
 \hypertarget{participants-and-descriptive-statistics}{%
 \subsection{3.1 Participants and descriptive statistics}\label{participants-and-descriptive-statistics}}
 
-Data collection took place between 2022-08-16 and 2023-02-03.
+Data collection took place between 2022-08 and 2023-02.
+A total of \(N=151\) participants completed the online survey and were invited to participate in the two lab sessions.
+Of these, \(N=125\) participated in the first laboratory session\textsuperscript{34} and \(N=121\) completed the second laboratory session.
+Of these, \(n=1\) person had to be excluded from analyses because they did not follow the instructions.
+The final sample consisted of \(N=120\) participants (100 female ; age: \(M=22.5\text{ }\pm\text{ }SD = 3.0\)).
+Please note that sample size for individual calculations may be smaller due to failure of EMG recording (\(n=1\)) and failure to record utility ratings (\(n=18\)).
 
 \hypertarget{confirmatory-analyses}{%
 \subsection{3.2. Confirmatory analyses}\label{confirmatory-analyses}}
+
+\hypertarget{manipulation-checks}{%
+\subsubsection{Manipulation checks}\label{manipulation-checks}}
+
+\hypertarget{subjective-arousal-and-physiological-responding}{%
+\paragraph{Subjective arousal and physiological responding}\label{subjective-arousal-and-physiological-responding}}
+
+To explore whether negative pictures evoke emotional arousal, we conducted an ANOVA for the active viewing condition.
+We found a highly significant main effect of valence (\(F(1, 119) = 399.95\), \(p < .001\), \(\hat{\eta}^2_G = .589\), 90\% CI \([.498, .659]\), \(\mathrm{BF}_{\textrm{10}} = 1.47 \times 10^{44}\)), indicating that negative pictures were perceived as more arousing than neutral pictures (\(\eta_{p}^{2}=0.77, [0.72, 1.00]\), \(BF_{10}=\)\(3.22 \times 10^{36}\)).
+To explore the effect of valence on facial muscle activity(\emph{Corrugator} and \emph{Levator}), we conducted two ANOVA for the active viewing condition.
+For \emph{Corrugator} activity, we found a significant main effect of valence (\(F(1, 117) = 27.73\), \(p < .001\), \(\hat{\eta}^2_G = .111\), 90\% CI \([.037, .206]\), \(\mathrm{BF}_{\textrm{10}} = 8.67 \times 10^{16}\)), indicating that negative pictures evoked greater \emph{Corrugator} activity than neutral pictures (\(\eta_{p}^{2}=0.19, [0.10, 1.00]\), \(BF_{10}=\)\(8.67 \times 10^{16}\)).
+In line with previously reported results, there was a significant main effect of valence for \emph{Levator} activity (\(F(1, 117) = 8.87\), \(p = .004\), \(\hat{\eta}^2_G = .039\), 90\% CI \([.002, .111]\)´, \(\mathrm{BF}_{\textrm{10}} = 188.72\)), indicating that negative pictures evoked greater \emph{Levator} activity than neutral pictures (\(\eta_{p}^{2}=0.07, [0.01, 1.00]\), \(BF_{10}=\)\(1.89 \times 10^{2}\)).
+
+To investigate whether ER strategies reduce emotional arousal, we conducted an rmANOVA comparing the subjective arousal ratings of four strategies (active viewing, distraction, distancing, suppression).
+We found a significant effect of strategy (\(F(2.71, 322.55) = 7.39\), \(p < .001\), \(\hat{\eta}^2_G = .015\), 90\% CI \([.000, .036]\), \(\mathrm{BF}_{\textrm{10}} = 0.21\)).
+Post-hoc test showed significantly reduced subjective arousal after use of distraction (\(\eta_{p}^{2}=0.05, [0.02, 1.00]\), \(BF_{10}=\)\(1.68 \times 10^{2}\)), distancing (\(\eta_{p}^{2}=0.03, [0.01, 1.00]\), \(BF_{10}=\)\(6.30 \times 10^{1}\)), and suppression (\(\eta_{p}^{2}=0.02, [0.00, 1.00]\), \(BF_{10}=\)\(1.97\)) compared with active viewing.
+However, there were no significant differences between strategies (all \(p>.05\)).
+To explore whether ER strategies reduce physiological responding, we conducted another two rmANOVAS comparing \emph{Corrugator} activity and \emph{Levator} activity of four the strategies.
+Regarding \emph{Corrugator} activity, we found a significant main effect of factor strategy (\(F(1.76, 206.02) = 13.70\), \(p < .001\), \(\hat{\eta}^2_G = .056\), 90\% CI \([.019, .094]\), \(\mathrm{BF}_{\textrm{10}} = 6.16 \times 10^{7}\)).
+Post-hoc test revealed reduced \emph{Corrugator} activity during distraction (\(\eta_{p}^{2}=0.06, [0.03, 1.00]\), \(BF_{10}=\)\(2.19 \times 10^{4}\)), distancing (\(\eta_{p}^{2}=0.07, [0.03, 1.00]\), \(BF_{10}=\)\(1.40 \times 10^{5}\)), and suppression (\(\eta_{p}^{2}=0.08, [0.04, 1.00]\), \(BF_{10}=\)\(1.84 \times 10^{7}\)) compared to active viewing.
+There were no significant differences between regulation strategies (all \(p>.05\)).
 
 \hypertarget{exploratory-analyses}{%
 \subsection{3.3. Exploratory analyses}\label{exploratory-analyses}}
