--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -590,12 +590,20 @@ In line with previously reported results, there was a significant main effect of
 
 To investigate whether ER strategies reduce emotional arousal, we conducted an rmANOVA comparing the subjective arousal ratings of four strategies (active viewing, distraction, distancing, suppression).
 We found a significant effect of strategy (\(F(2.71, 322.55) = 7.39\), \(p < .001\), \(\hat{\eta}^2_G = .015\), 90\% CI \([.000, .036]\), \(\mathrm{BF}_{\textrm{10}} = 0.21\)).
-Post-hoc test showed significantly reduced subjective arousal after use of distraction (\(\eta_{p}^{2}=0.05, [0.02, 1.00]\), \(BF_{10}=\)\(1.68 \times 10^{2}\)), distancing (\(\eta_{p}^{2}=0.03, [0.01, 1.00]\), \(BF_{10}=\)\(6.30 \times 10^{1}\)), and suppression (\(\eta_{p}^{2}=0.02, [0.00, 1.00]\), \(BF_{10}=\)\(1.97\)) compared with active viewing.
+Post-hoc test showed significantly reduced subjective arousal after use of distraction (\(\eta_{p}^{2}=0.05, [0.02, 1.00]\), \(BF_{10}=\)\(1.68 \times 10^{2}\)), distancing (\(\eta_{p}^{2}=0.03, [0.01, 1.00]\), \(BF_{10}=\)\(6.30 \times 10^{1}\)), and suppression (\(\eta_{p}^{2}=0.02, [0.00, 1.00]\), \(BF_{10}=\)\(1.97\)) compared to active viewing.
 However, there were no significant differences between strategies (all \(p>.05\)).
-To explore whether ER strategies reduce physiological responding, we conducted another two rmANOVAS comparing \emph{Corrugator} activity and \emph{Levator} activity of four the strategies.
+To explore whether ER strategies reduce physiological responding, we conducted another two rmANOVA comparing \emph{Corrugator} activity and \emph{Levator} activity of four the strategies.
 Regarding \emph{Corrugator} activity, we found a significant main effect of factor strategy (\(F(1.76, 206.02) = 13.70\), \(p < .001\), \(\hat{\eta}^2_G = .056\), 90\% CI \([.019, .094]\), \(\mathrm{BF}_{\textrm{10}} = 6.16 \times 10^{7}\)).
 Post-hoc test revealed reduced \emph{Corrugator} activity during distraction (\(\eta_{p}^{2}=0.06, [0.03, 1.00]\), \(BF_{10}=\)\(2.19 \times 10^{4}\)), distancing (\(\eta_{p}^{2}=0.07, [0.03, 1.00]\), \(BF_{10}=\)\(1.40 \times 10^{5}\)), and suppression (\(\eta_{p}^{2}=0.08, [0.04, 1.00]\), \(BF_{10}=\)\(1.84 \times 10^{7}\)) compared to active viewing.
 There were no significant differences between regulation strategies (all \(p>.05\)).
+
+\hypertarget{subjective-effort-of-er-strategies}{%
+\paragraph{Subjective effort of ER strategies}\label{subjective-effort-of-er-strategies}}
+
+To investigate whether ER strategies require cognitive effort, we conducted an rmANOVA comparing the subjective effort ratings of four strategies (active viewing, distraction, distancing, suppression).
+We found a significant effect of strategy (\(F(2.92, 347.65) = 128.47\), \(p < .001\), \(\hat{\eta}^2_G = .327\), 90\% CI \([.261, .384]\), \(\mathrm{BF}_{\textrm{10}} = 1.84 \times 10^{37}\)).
+Post-hoc test showed significant higher subjective effort for distraction (\(\eta_{p}^{2}=0.47, [0.42, 1.00]\), \(BF_{10}=\)\(3.61 \times 10^{30}\)), distancing (\(\eta_{p}^{2}=0.41, [0.35, 1.00]\), \(BF_{10}=\)\(1.60 \times 10^{28}\)), and suppression (\(\eta_{p}^{2}=0.30, [0.23, 1.00]\), \(BF_{10}=\)\(1.27 \times 10^{19}\)) compared to active viewing.
+Moreover, we found significantly lower effort during suppression compared with distraction (\(\eta_{p}^{2}=0.08, [0.04, 1.00]\), \(BF_{10}=\)\(1.61 \times 10^{6}\)) and distancing (\(\eta_{p}^{2}=0.03, [0.01, 1.00]\), \(BF_{10}=\)\(2.92 \times 10^{1}\)).
 
 \hypertarget{exploratory-analyses}{%
 \subsection{3.3. Exploratory analyses}\label{exploratory-analyses}}
