--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -36,26 +36,26 @@ Please note that sample size for individual calculations may be smaller due to f
 #### Subjective arousal and physiological responding
 
 To explore whether negative pictures evoke emotional arousal, we conducted an ANOVA for the active viewing condition. 
-We found a highly significant main effect of valence (`r papaja::apa_print(SubjArousalView_aov)$full_result`, `r papaja::apa_print(SubjArousalView_BF)$statistic`), indicating that negative pictures were perceived as more arousing than neutral pictures ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalView_con[,8:9])`$, $BF_{10}=$`r papaja::printnum(SubjArousalView_con[,7], format = "e")`).
+We found a highly significant main effect of valence (`r papaja::apa_print(SubjArousalView_aov)$full_result`, `r papaja::apa_print(SubjArousalView_BF)$statistic`), indicating that negative pictures were perceived as more arousing than neutral pictures ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalView_con[,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjArousalView_con[,7], format = "e")`).
 To explore the effect of valence on facial muscle activity(*Corrugator* and *Levator*), we conducted two ANOVA for the active viewing condition.
-For *Corrugator* activity, we found a significant main effect of valence (`r papaja::apa_print(EMGCorrView_aov)$full_result`, `r papaja::apa_print(EMGCorrView_BF)$statistic`), indicating that negative pictures evoked greater *Corrugator* activity than neutral pictures ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrView_con[,8:9])`$, $BF_{10}=$`r papaja::printnum(EMGCorrView_con[,7], format = "e")`).
-In line with previously reported results, there was a significant main effect of valence for *Levator* activity (`r papaja::apa_print(EMGLevView_aov)$full_result`´, `r papaja::apa_print(EMGLevView_BF)$statistic`), indicating that negative pictures evoked greater *Levator* activity than neutral pictures ($\eta_{p}^{2}=`r papaja::printnum(EMGLevView_con[,8:9])`$, $BF_{10}=$`r papaja::printnum(EMGLevView_con[,7], format = "e")`).
+For *Corrugator* activity, we found a significant main effect of valence (`r papaja::apa_print(EMGCorrView_aov)$full_result`, `r papaja::apa_print(EMGCorrView_BF)$statistic`), indicating that negative pictures evoked greater *Corrugator* activity than neutral pictures ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrView_con[,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGCorrView_con[,7], format = "e")`).
+In line with previously reported results, there was a significant main effect of valence for *Levator* activity (`r papaja::apa_print(EMGLevView_aov)$full_result`´, `r papaja::apa_print(EMGLevView_BF)$statistic`), indicating that negative pictures evoked greater *Levator* activity than neutral pictures ($\eta_{p}^{2}=`r papaja::printnum(EMGLevView_con[,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGLevView_con[,7], format = "e")`).
 
 To investigate whether ER strategies reduce emotional arousal, we conducted an rmANOVA comparing the subjective arousal ratings of four strategies (active viewing, distraction, distancing, suppression). 
 We found a significant effect of strategy (`r papaja::apa_print(SubjArousalReg_aov)$full_result`, `r papaja::apa_print(SubjArousalReg_BF)$statistic`).
-Post-hoc test showed significantly reduced subjective arousal after use of distraction ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalReg_con[1,8:9])`$, $BF_{10}=$`r papaja::printnum(SubjArousalReg_con[1,7], format = "e")`), distancing ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalReg_con[2,8:9])`$, $BF_{10}=$`r papaja::printnum(SubjArousalReg_con[2,7], format = "e")`), and suppression ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalReg_con[3,8:9])`$, $BF_{10}=$`r papaja::printnum(SubjArousalReg_con[3,7], format = "e")`) compared to active viewing.
+Post-hoc test showed significantly reduced subjective arousal after use of distraction ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalReg_con[1,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjArousalReg_con[1,7], format = "e")`), distancing ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalReg_con[2,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjArousalReg_con[2,7])`), and suppression ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalReg_con[3,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjArousalReg_con[3,7], format = "e")`) compared to active viewing.
 However, there were no significant differences between strategies (all $p>.05$).
 To explore whether ER strategies reduce physiological responding, we conducted another two rmANOVA comparing *Corrugator* activity and *Levator* activity of four the strategies.
 Regarding *Corrugator* activity, we found a significant main effect of factor strategy (`r papaja::apa_print(EMGCorrReg_aov)$full_result`, `r papaja::apa_print(EMGCorrReg_BF)$statistic`).
-Post-hoc test revealed reduced *Corrugator* activity during distraction ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrReg_con[1,8:9])`$, $BF_{10}=$`r papaja::printnum(EMGCorrReg_con[1,7], format = "e")`), distancing ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrReg_con[2,8:9])`$, $BF_{10}=$`r papaja::printnum(EMGCorrReg_con[2,7], format = "e")`), and suppression ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrReg_con[3,8:9])`$, $BF_{10}=$`r papaja::printnum(EMGCorrReg_con[3,7], format = "e")`) compared to active viewing.
+Post-hoc test revealed reduced *Corrugator* activity during distraction ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrReg_con[1,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGCorrReg_con[1,7], format = "e")`), distancing ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrReg_con[2,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGCorrReg_con[2,7], format = "e")`), and suppression ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrReg_con[3,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGCorrReg_con[3,7], format = "e")`) compared to active viewing.
 There were no significant differences between regulation strategies (all $p>.05$).
 
 #### Subjective effort of ER strategies
 
 To investigate whether ER strategies require cognitive effort, we conducted an rmANOVA comparing the subjective effort ratings of four strategies (active viewing, distraction, distancing, suppression).
 We found a significant effect of strategy (`r papaja::apa_print(SubjEffort_aov)$full_result`, `r papaja::apa_print(SubjEffort_BF)$statistic`).
-Post-hoc test showed significant higher subjective effort for distraction ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[1,8:9])`$, $BF_{10}=$`r papaja::printnum(SubjEffort_con[1,7], format = "e")`), distancing ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[2,8:9])`$, $BF_{10}=$`r papaja::printnum(SubjEffort_con[2,7], format = "e")`), and suppression ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[3,8:9])`$, $BF_{10}=$`r papaja::printnum(SubjEffort_con[3,7], format = "e")`) compared to active viewing.
-Moreover, we found significantly lower effort during suppression compared with distraction ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[5,8:9])`$, $BF_{10}=$`r papaja::printnum(SubjEffort_con[5,7], format = "e")`) and distancing ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[6,8:9])`$, $BF_{10}=$`r papaja::printnum(SubjEffort_con[6,7], format = "e")`).
+Post-hoc test showed significant higher subjective effort for distraction ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[1,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjEffort_con[1,7], format = "e")`), distancing ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[2,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjEffort_con[2,7], format = "e")`), and suppression ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[3,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjEffort_con[3,7], format = "e")`) compared to active viewing.
+Moreover, we found significantly lower effort during suppression compared with distraction ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[5,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjEffort_con[5,7], format = "e")`) and distancing ($\eta_{p}^{2}=`r papaja::printnum(SubjEffort_con[6,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjEffort_con[6,7])`).
 
 #### Subjective values of ER strategies
 
@@ -64,6 +64,8 @@ Moreover, we found significantly lower effort during suppression compared with d
 #### Associations between subjective values and flexible ER
 
 To investigate the ecological validity of the subjective values of ER strategies we calculated, we looked to see if SVs were associated with the actual choice of participants in the choice block.
-Therefore, a $\chi^{2}$ test 
+Therefore, a $\chi^{2}$ test with predicted choice (i.e., the strategy with the highest SV of each participant) and actual choice was computed.
+There was a significant association between predicted choice and actual choice (`r papaja::apa_print(choice_chisq, n=120)$statistic[[1]]`, `r papaja::apa_print(choice_chisq_BF)$statistic`). 
+
 
 ## 3.3. Exploratory analyses
