--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -35,20 +35,13 @@ Please note that sample size for individual calculations may be smaller due to f
 
 #### Subjective arousal and physiological responding
 
-To explore whether negative pictures evoke emotional arousal, we conducted an ANOVA for the active viewing condition. 
-We found a highly significant main effect of valence (`r papaja::apa_print(SubjArousalView_aov)$full_result`, `r papaja::apa_print(SubjArousalView_BF)$statistic`), indicating that negative pictures were perceived as more arousing than neutral pictures ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalView_con[,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjArousalView_con[,7], format = "e")`).
-To explore the effect of valence on facial muscle activity(*Corrugator* and *Levator*), we conducted two ANOVA for the active viewing condition.
-For *Corrugator* activity, we found a significant main effect of valence (`r papaja::apa_print(EMGCorrView_aov)$full_result`, `r papaja::apa_print(EMGCorrView_BF)$statistic`), indicating that negative pictures evoked greater *Corrugator* activity than neutral pictures ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrView_con[,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGCorrView_con[,7], format = "e")`).
-In line with previously reported results, there was a significant main effect of valence for *Levator* activity (`r papaja::apa_print(EMGLevView_aov)$full_result`´, `r papaja::apa_print(EMGLevView_BF)$statistic`), indicating that negative pictures evoked greater *Levator* activity than neutral pictures ($\eta_{p}^{2}=`r papaja::printnum(EMGLevView_con[,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGLevView_con[,7], format = "e")`).
+To explore whether negative pictures evoke emotional arousal and physiological responding, we conducted separate ANOVAs for the active viewing condition with predictors subjective arousal, *Corrugator*, and *Levator* activity. 
+We found a highly significant main effect of valence for subjective arousal (`r papaja::apa_print(SubjArousalView_aov)$full_result`, `r papaja::apa_print(SubjArousalView_BF)$statistic`), *Corrugator* activity (`r papaja::apa_print(EMGCorrView_aov)$full_result`, `r papaja::apa_print(EMGCorrView_BF)$statistic`), and *Levator* activity (`r papaja::apa_print(EMGLevView_aov)$full_result`´, `r papaja::apa_print(EMGLevView_BF)$statistic`), indicating that negative pictures successfully evoked emotional arousal and physiological responding.
 
-To investigate whether ER strategies reduce emotional arousal, we conducted an rmANOVA comparing the subjective arousal ratings of four strategies (active viewing, distraction, distancing, suppression). 
-We found a significant effect of strategy (`r papaja::apa_print(SubjArousalReg_aov)$full_result`, `r papaja::apa_print(SubjArousalReg_BF)$statistic`).
-Post-hoc test showed significantly reduced subjective arousal after use of distraction ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalReg_con[1,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjArousalReg_con[1,7], format = "e")`), distancing ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalReg_con[2,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjArousalReg_con[2,7])`), and suppression ($\eta_{p}^{2}=`r papaja::printnum(SubjArousalReg_con[3,8:9])`$, $BF_{10}=$ `r papaja::printnum(SubjArousalReg_con[3,7], format = "e")`) compared to active viewing.
-However, there were no significant differences between strategies (all $p>.05$).
-To explore whether ER strategies reduce physiological responding, we conducted another two rmANOVA comparing *Corrugator* activity and *Levator* activity of four the strategies.
-Regarding *Corrugator* activity, we found a significant main effect of factor strategy (`r papaja::apa_print(EMGCorrReg_aov)$full_result`, `r papaja::apa_print(EMGCorrReg_BF)$statistic`).
-Post-hoc test revealed reduced *Corrugator* activity during distraction ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrReg_con[1,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGCorrReg_con[1,7], format = "e")`), distancing ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrReg_con[2,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGCorrReg_con[2,7], format = "e")`), and suppression ($\eta_{p}^{2}=`r papaja::printnum(EMGCorrReg_con[3,8:9])`$, $BF_{10}=$ `r papaja::printnum(EMGCorrReg_con[3,7], format = "e")`) compared to active viewing.
-There were no significant differences between regulation strategies (all $p>.05$).
+To investigate whether ER strategies reduce emotional arousal and physiological respoindng, we conducted separate rmANOVA comparing subjective arousal, *Corrugator*, and *Levator* activity of four strategies (active viewing, distraction, distancing, suppression). 
+We found a significant effect of strategy for subjective arousal (`r papaja::apa_print(SubjArousalReg_aov)$full_result`, `r papaja::apa_print(SubjArousalReg_BF)$statistic`), *Corrugator* activity (`r papaja::apa_print(EMGCorrReg_aov)$full_result`, `r papaja::apa_print(EMGCorrReg_BF)$statistic`), and *Levator* activity (`r papaja::apa_print(EMGLevReg_aov)$full_result`, `r papaja::apa_print(EMGLevReg_BF)$statistic`), indicating that regulation strategies reduced subjective arousal and physiological responding.
+For detailed information on post-hoc tests, please see [supplementary material](#SupplementEffectER). 
+
 
 #### Subjective effort of ER strategies
 
