added post hoc tests

--- a/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
@@ -68,7 +68,7 @@ An internal consistency of Cronbach's $\alpha=.88$ was reported [@Derryberry2002
 
 \newpage
 
-## Test for normal distribution of predictor variables
+## Test for normal distribution of predictor variables {#SupplementNV}
 
 ``` {r TabNV, echo=FALSE, message=FALSE, warning=FALSE} 
 
@@ -88,4 +88,26 @@ papaja::apa_table(
 
 \newpage
 
+## Post-hoc tests of strategies for effects of ER on subjective arousal and physiological responding {#SupplementEffectER} 
+
+``` {r SupplEffectER, echo=FALSE, message=FALSE, warning=FALSE} 
+papaja::apa_table(
+  SubjArousalReg_con,
+  caption = "Post-hoc tests for effects of ER strategies on subjective arousal ratings.",
+  escape = FALSE,
+  placement = "H") 
+
+papaja::apa_table(
+  EMGCorrReg_con,
+  caption = "Post-hoc tests for effects of ER strategies on Corrugator activity",
+  escape = FALSE,
+  placement = "H")
+
+papaja::apa_table(
+  EMGLevReg_con,
+  caption = "Post-hoc tests for effects of ER strategies on Levator activity",
+  escape = FALSE,
+  placement = "H")
+
+```
 
